--- a/asset/zf-apigility-documentation-swagger/index.html
+++ b/asset/zf-apigility-documentation-swagger/index.html
@@ -3,19 +3,19 @@
 <head>
   <title>Swagger UI</title>
   <link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'/>
-  <link href='css/highlight.default.css' media='screen' rel='stylesheet' type='text/css'/>
-  <link href='css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
-  <script type="text/javascript" src="lib/shred.bundle.js"></script>
-  <script src='lib/jquery-1.8.0.min.js' type='text/javascript'></script>
-  <script src='lib/jquery.slideto.min.js' type='text/javascript'></script>
-  <script src='lib/jquery.wiggle.min.js' type='text/javascript'></script>
-  <script src='lib/jquery.ba-bbq.min.js' type='text/javascript'></script>
-  <script src='lib/handlebars-1.0.0.js' type='text/javascript'></script>
-  <script src='lib/underscore-min.js' type='text/javascript'></script>
-  <script src='lib/backbone-min.js' type='text/javascript'></script>
-  <script src='lib/swagger.js' type='text/javascript'></script>
-  <script src='swagger-ui.js' type='text/javascript'></script>
-  <script src='lib/highlight.7.3.pack.js' type='text/javascript'></script>
+  <link href='/zf-apigility-documentation-swagger/css/highlight.default.css' media='screen' rel='stylesheet' type='text/css'/>
+  <link href='/zf-apigility-documentation-swagger/css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
+  <script type="text/javascript" src="/zf-apigility-documentation-swagger/lib/shred.bundle.js"></script>
+  <script src='/zf-apigility-documentation-swagger/lib/jquery-1.8.0.min.js' type='text/javascript'></script>
+  <script src='/zf-apigility-documentation-swagger/lib/jquery.slideto.min.js' type='text/javascript'></script>
+  <script src='/zf-apigility-documentation-swagger/lib/jquery.wiggle.min.js' type='text/javascript'></script>
+  <script src='/zf-apigility-documentation-swagger/lib/jquery.ba-bbq.min.js' type='text/javascript'></script>
+  <script src='/zf-apigility-documentation-swagger/lib/handlebars-1.0.0.js' type='text/javascript'></script>
+  <script src='/zf-apigility-documentation-swagger/lib/underscore-min.js' type='text/javascript'></script>
+  <script src='/zf-apigility-documentation-swagger/lib/backbone-min.js' type='text/javascript'></script>
+  <script src='/zf-apigility-documentation-swagger/lib/swagger.js' type='text/javascript'></script>
+  <script src='/zf-apigility-documentation-swagger/swagger-ui.js' type='text/javascript'></script>
+  <script src='/zf-apigility-documentation-swagger/lib/highlight.7.3.pack.js' type='text/javascript'></script>
   <script type="text/javascript">
     $(function () {
       window.swaggerUi = new SwaggerUi({
